--- a/monitor-dependency-prs/action.yml
+++ b/monitor-dependency-prs/action.yml
@@ -38,7 +38,7 @@ runs:
     - name: List Pull Requests with Dependencies Label
       id: list_prs
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ inputs.github-token }}
       run: |
         response=$(curl -s -H "Authorization: token $GITHUB_TOKEN" \
                         -H "Accept: application/vnd.github.v3+json" \
@@ -60,13 +60,13 @@ runs:
 
     - name: Post PR Count to Atlassian Compass
       env:
-        COMPASS_API_TOKEN: ${{ secrets.COMPASS_TOKEN }}
+        COMPASS_API_TOKEN: ${{ inputs.github-token }}
         PR_COUNT: ${{ env.PR_COUNT }}
       run: |
         env
         curl --request POST \
         --url https://gc3-uk.atlassian.net/gateway/api/compass/v1/metrics \
-        --user "seyit.tolga@digital.cabinet-office.gov.uk:${{ secrets.COMPASS_TOKEN }}" \
+        --user "seyit.tolga@digital.cabinet-office.gov.uk:${{ inputs.github-token }}" \
         --header "Accept: application/json" \
         --header "Content-Type: application/json" \
         --data "{
