--- a/monitor-dependency-prs/action.yml
+++ b/monitor-dependency-prs/action.yml
@@ -11,18 +11,9 @@ outputs:
   pr-count:
     description: 'Number of open PRs with the dependencies label'
     
-# permissions:
-#       id-token: write
-#       contents: read
-#       pull-requests: read
-
 runs:
   using: 'composite'
   steps:
-
-    - name: Debug Action Version
-      run: cat $GITHUB_ACTION_PATH/action.yml
-      shell: bash
 
     # - name: Checkout Repository
     #   uses: actions/checkout@v3
@@ -32,7 +23,6 @@ runs:
       env:
         GITHUB_TOKEN: ${{ inputs.github-token }}
       run: |
-        env
         response=$(curl -s -H "Authorization: token $GITHUB_TOKEN" \
                         -H "Accept: application/vnd.github.v3+json" \
                         "https://api.github.com/repos/${{ github.repository }}/pulls?state=open&per_page=100")
@@ -54,13 +44,12 @@ runs:
 
     - name: Post PR Count to Atlassian Compass
       env:
-        COMPASS_API_TOKEN: ${{ inputs.compass-token }}
+        COMPASS_TOKEN: ${{ inputs.compass-token }}
         PR_COUNT: ${{ env.PR_COUNT }}
       run: |
-        env
         curl --request POST \
           --url https://gc3-uk.atlassian.net/gateway/api/compass/v1/metrics \
-          --user "seyit.tolga@digital.cabinet-office.gov.uk:$COMPASS_API_TOKEN" \
+          --user "seyit.tolga@digital.cabinet-office.gov.uk:$COMPASS_TOKEN" \
           --header "Accept: application/json" \
           --header "Content-Type: application/json" \
           --data "{
